@@ -23,7 +23,7 @@
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -298,6 +298,24 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <!--
+            The dynamically evaluated @{argLine} variable is required to persist command line parameters
+            appended by the jacoco maven plugin (jacoco:prepare-agent)
+            The memory related ones specified inline are a workaround for Windows builds.
+            See https://stackoverflow.com/questions/23260057/the-forked-vm-terminated-without-saying-properly-goodbye-vm-crash-or-system-exi/33757854#33757854
+          -->
+          <argLine>
+            @{argLine} -Xmx1024m -XX:MaxPermSize=256m
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
         <artifactId>sonar-packaging-maven-plugin</artifactId>
         <version>1.18.0.372</version>
@@ -321,23 +339,34 @@
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.1.0</version>
+        <version>4.3.0</version>
+        <dependencies>
+          <!-- Explicit dep on jaxb-api to avoid problems with
+            JDK9 and later, until a new version of
+            coveralls-maven-plugin is released.
+            See also https://github.com/trautonen/coveralls-maven-plugin/issues/112-->
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+          </dependency>
+        </dependencies>
         <configuration>
-          <coberturaReports>
-            <coberturaReport>${project.basedir}/target/report/coverage.xml</coberturaReport>
-          </coberturaReports>
           <repoToken>${coveralls.repo.token}</repoToken>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.7</version>
-        <configuration>
-          <format>xml</format>
-          <maxmem>256m</maxmem>
-          <check>true</check>
-        </configuration>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.5</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
